change from button to scan to scan every second

--- a/data/secrets/api_secrets.example
+++ b/data/secrets/api_secrets.example
@@ -1,8 +1,23 @@
 {"_comment": "include the necessary secret informations here",
-    "rspace": [{"apiKey": "x",
-    "apiUrl": "x",
-    "apiInventoryPath": "x",
-    "apiSearchFile": "v1/search?",
-    "apiSampleFile": "v1/samples"}],
-    "elabFTW": [{}]
+    "rspace": [{
+        "apiKey": "",
+        "apiUrl": "",
+        "apiInventoryPath": "inventory",
+        "apiSearchFile": "v1/search?",
+        "apiSampleFile": "v1/samples"}],
+    "elabFTW": [{
+        "apiKey": "",
+        "apiUrl": "",
+        "apiInventoryPath": "",
+        "apiSearchFile": "",
+        "apiSampleFile": ""}],
+    "linkformat": [{
+        "defaultSampleNameOrder": ["decoded", "documentName", "documentUniqueId", "userName", "timestamp"],
+        "barcodesDescription": "datamatrix code: ",
+        "postSampleLinkDescription": "newly created: ",
+        "getSampleLinkDescription": "found: "
+    }],
+    "options": [{
+        "recOnClick": 0
+    }]
 }
