--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "version": "0.6",
+  "version": "0.7",
   "name": "dmtx Sample Creator",
   "description": "read a Datamatrix Code from Camera or Scanner check if code already exist in rSpace Inventory then paste link to ELN.",
   "permissions": [
@@ -18,7 +18,8 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.lin-magdeburg.de/workspace/editor/structuredDocument*", "*://*/experiments.php?mode=edit*"],
+      "matches": ["*://*.lin-magdeburg.de/workspace/editor/structuredDocument*",                 
+                  "*://*/experiments.php?mode=edit*"],
       "js": ["create_buttons.js", "dmtx_main.js", "/data/qrScript.js"],
       "css": ["/data/style.css"]
     }
